# Alpaca

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main.cc
core/: input.cc  input.hh  window.cc  window.hh
graphics/: shader.cc
res/shader/simple/: shader.fs  shader.vs
src/: main.cc
src/core/: input.cc  input.hh  window.cc  window.hh
src/graphics/: camera.cc  camera.hh  mesh.hh  renderer.cc  renderer.hh  shader.cc  shader.hh  texture.cc  texture.hh  vertexattrib.cc  vertexattrib.hh
src/util/: resource.cc  resource.hh
util/: resource.cc
